--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-calendly": "^4.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^2.2.0"
